# sphinx_algolia_crawler

./: README.md  RELEASE_NOTES.md  __init__.py  environment.yml  pyproject.toml
sphinx_algolia_crawler/: __init__.py
tools/: conda-activate.ps1
